[gd_scene load_steps=13 format=3 uid="uid://d1yxypa8bulx8"]

[ext_resource type="Script" path="res://scene.gd" id="1_2vxoo"]
[ext_resource type="PackedScene" uid="uid://ufq7ji2vrpa5" path="res://paddle.tscn" id="1_8tbnk"]
[ext_resource type="Script" path="res://paddle1.gd" id="2_xwq6r"]
[ext_resource type="Script" path="res://paddle2.gd" id="3_lyld1"]
[ext_resource type="Script" path="res://Ball.gd" id="4_nwtf8"]
[ext_resource type="AudioStream" uid="uid://dp7qfqbfbx2jm" path="res://sounds/paddle_hit_ball.wav" id="6_wp1lq"]
[ext_resource type="AudioStream" uid="uid://824oc1qm2u2q" path="res://sounds/player_scores.wav" id="7_ub5fx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_28lt8"]
size = Vector2(738, 20)

[sub_resource type="SphereMesh" id="SphereMesh_5cja5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1y5qf"]
radius = 5.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5rdqd"]
size = Vector2(54, 557)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ewi2r"]
size = Vector2(86, 544)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_2vxoo")

[node name="Paddle1" parent="." instance=ExtResource("1_8tbnk")]
position = Vector2(50, 160)
script = ExtResource("2_xwq6r")

[node name="Paddle2" parent="." instance=ExtResource("1_8tbnk")]
position = Vector2(590, 160)
script = ExtResource("3_lyld1")

[node name="Wall1" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall1"]
position = Vector2(336, -7)
shape = SubResource("RectangleShape2D_28lt8")

[node name="Wall2" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall2"]
position = Vector2(340, 329)
shape = SubResource("RectangleShape2D_28lt8")

[node name="Ball" type="CharacterBody2D" parent="."]
script = ExtResource("4_nwtf8")

[node name="MeshInstance2D" type="MeshInstance2D" parent="Ball"]
position = Vector2(320, 160)
scale = Vector2(10, 10)
mesh = SubResource("SphereMesh_5cja5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
position = Vector2(320, 160)
shape = SubResource("CircleShape2D_1y5qf")

[node name="Gate1" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gate1"]
position = Vector2(-66, 122.5)
shape = SubResource("RectangleShape2D_5rdqd")

[node name="Gate2" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gate2"]
position = Vector2(742, 135)
shape = SubResource("RectangleShape2D_ewi2r")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Player2Score" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 120.0
offset_top = -40.0
offset_right = 157.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1

[node name="Player1Score" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -40.0
offset_right = -123.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1

[node name="Helper1Text" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.077
anchor_top = 0.83
anchor_right = 0.077
anchor_bottom = 0.83
offset_left = -26.28
offset_top = -13.6
offset_right = 41.72
offset_bottom = 38.4
grow_horizontal = 2
grow_vertical = 2
text = "W - Up
S - Down
"

[node name="Helper2Text" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.903
anchor_top = 0.862
anchor_right = 0.909
anchor_bottom = 0.862
offset_left = -121.92
offset_top = -31.84
offset_right = 29.24
offset_bottom = 20.16
grow_horizontal = 2
grow_vertical = 2
text = "Up Arrow - Up
Down Arrow - Down
"

[node name="Helper3Text" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.266
anchor_right = 0.5
anchor_bottom = 0.266
offset_left = -84.0
offset_top = -13.12
offset_right = 87.0
offset_bottom = 12.88
text = "Press <Space> to start"

[node name="BallHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_wp1lq")

[node name="Score" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_ub5fx")

[connection signal="isPlaying" from="Ball" to="." method="_on_ball_is_playing"]
[connection signal="scored" from="Ball" to="." method="_on_ball_scored"]
[connection signal="scored" from="Ball" to="Paddle1" method="_on_ball_scored"]
[connection signal="scored" from="Ball" to="Paddle2" method="_on_ball_scored"]
